--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -1,7 +1,8 @@
 <link rel="stylesheet" href="/styles/auth.css" />
   <div class="min-h-screen flex items-center justify-center bg-white">
-    <div class="auth-container w-full max-w-md bg-white p-6 rounded-lg shadow-md">
-      <img src="/img/arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="back-arrow" class="back-arrow" />
+    <div class="auth-container w-full h-100 max-w-md bg-white p-6 rounded-lg shadow-md">
+      <a href="/login"><img src="/img/arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="back-arrow" class="back-arrow" /></a>
+      
       <h1 class="forgotpassword-title">Forgot Password</h1>
       <p class="forgotpassword-subtitle">Enter your email to reset your password</p>
 
