--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -98,7 +98,7 @@
                 class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold py-2 px-6 rounded-lg transition">
              Back to Shop
             </a>
-            <a href="/orders"
+            <a href="/myOrders"
                 class="bg-gray-800 hover:bg-gray-900 text-white font-semibold py-2 px-6 rounded-lg transition">
                 My Orders
             </a>
