seperated order and order items

--- a/views/user/myOrder.ejs
+++ b/views/user/myOrder.ejs
@@ -33,6 +33,8 @@
             <!-- Product Info -->
             <div>
               <p class="font-semibold text-gray-800"><%= item.productId.name %></p>
+              <p class="text-sm text-green-600">Status: ₹<%= item.status %>
+              </p>
               <p class="text-sm text-gray-600">Quantity: <%= item.quantity %></p>
               <p class="text-sm text-gray-600">Price: ₹<%= item.price %></p>
               <p class="text-sm font-medium text-gray-700">Subtotal: ₹<%= item.quantity * item.price %></p>
