group cancel implemented

--- a/views/admin/orderDetail.ejs
+++ b/views/admin/orderDetail.ejs
@@ -66,6 +66,8 @@
                                     </p>
                                     <p class="text-sm text-gray-600">Price: ₹<%= item.price %>
                                     </p>
+                                    <p class="text-sm text-gray-600">Status: <%= item.status %>
+                                    </p>
                                 </div>
                     </div>
 
