--- a/views/admin/orderDetail.ejs
+++ b/views/admin/orderDetail.ejs
@@ -75,7 +75,7 @@
                             class="mt-2">
                             <button type="submit"
                                 class="bg-red-500 text-white px-4 py-1.5 rounded-md text-sm font-medium hover:bg-red-600 transition">
-                                Cancel This Item
+                                Cancel Item
                             </button>
                         </form>
                     </div>
